adicionando teclado e tela

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,11 @@
     "python.analysis.typeshedPaths": [
         "~\\.micropico-stubs\\included",
         "~\\.micropico-stubs\\included",
+        "~\\.micropico-stubs\\included",
         "~\\.micropico-stubs\\included"
     ],
     "python.analysis.extraPaths": [
+        "~\\.micropico-stubs\\included",
         "~\\.micropico-stubs\\included",
         "~\\.micropico-stubs\\included",
         "~\\.micropico-stubs\\included"
